; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/sync/extr_sync.c_RegisterSyncRequest.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/sync/extr_sync.c_RegisterSyncRequest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pendingOps = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RegisterSyncRequest(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32*, i32** @pendingOps, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @RememberSyncRequest(i32* %12, i32 %13)
  store i32 1, i32* %4, align 4
  br label %33

15:                                               ; preds = %3
  br label %16

16:                                               ; preds = %29, %15
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @ForwardSyncRequest(i32* %17, i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %28, label %22

22:                                               ; preds = %16
  %23 = load i32, i32* %8, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %29, label %25

25:                                               ; preds = %22
  %26 = load i32, i32* %7, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %25, %16
  br label %31

29:                                               ; preds = %25, %22
  %30 = call i32 @pg_usleep(i64 10000)
  br label %16

31:                                               ; preds = %28
  %32 = load i32, i32* %8, align 4
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %31, %11
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @RememberSyncRequest(i32*, i32) #1

declare dso_local i32 @ForwardSyncRequest(i32*, i32) #1

declare dso_local i32 @pg_usleep(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
